--- a/src/components/Foldwallet.astro
+++ b/src/components/Foldwallet.astro
@@ -43,10 +43,10 @@
                 <p>背面にはカードポケットを設け、ICカードなど使用頻度の高いカードの収納がおすすめです。</p><br class="sp"><br class="sp"><br class="pc">
                   
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                    &ensp;<a href="/" class="animate-link">(準備中)ご注文はこちらから</a>・・・25,000円（税込)</a><br class="sp"><br class="pc">
+                    &ensp;<a href="/order8" class="animate-link">ご注文はこちらから</a>・・・22,000円</a><br class="sp"><br class="pc">
                     <br>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg> 
-                    &ensp;<a href="/" class="animate-link" >(準備中)セミオーダーご希望の方はこちらから</a>
+                    &ensp;<a href="/p_order8" class="animate-link" >セミオーダーご希望の方はこちらから</a>
                 
              
                 </p>
