--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -11,7 +11,7 @@
     <p class="c-pageSection_text">販売責任者:<br>ヘルナンデス</p>
     <p class="c-pageSection_text">取り扱い商品<br>小物や鞄等の皮革製品</p>
     <p class="c-pageSection_text">所在地<br>〒0800019 北海道帯広市西九条南1-2-1</p>
-    <p class="c-pageSection_text">電話番号<br>070-4798-7668<br>(※申し訳ございませんが、電話の窓口は設けておりません。<a href="https://pircamabui.com/contact/" class="animate-link">お問い合わせフォームにてお願いいたします。</a>)</p>
+    <p class="c-pageSection_text">電話番号<br>(※申し訳ございませんが、電話の窓口は設けておりません。<a href="https://pircamabui.com/contact/" class="animate-link">お問い合わせフォームにてお願いいたします。</a>)</p>
     <p class="c-pageSection_text">連絡先<br><a href="https://pircamabui.com/contact/" class="animate-link">お問い合わせフォームにてお願いいたします。</a></p>
     <p class="c-pageSection_text">ホームページURL<br>https://pircamabui.com/</p>
   </section>
