--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,6 +18,9 @@
 
 <style>
 
+.grecaptcha-badge { visibility: hidden; }
+
+
 @media print, screen and (min-width: 1900px)  {
   .nav-links li a {
  
