--- a/src/components/MinimamEn.astro
+++ b/src/components/MinimamEn.astro
@@ -10,7 +10,7 @@
                             </time>
                     </div>
                     <h1 class="newsTop_title">
-                        MIMIMAM WALLET</h1>
+                        MINIMAM WALLET</h1>
                     <div class="newsTop_share">
                       <div class="newsTop_shareTitle"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="18px"
                         height="18px"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg><a class="sns" href="https://www.instagram.com/pirca.mabui/" target="blank">&thinsp;Instagram</a>
@@ -37,12 +37,12 @@
                 </p><br class="sp"><br class="sp"><br class="pc">
                   
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                &ensp;<a href="https://pircamabui.stores.jp/items/63dc775397c24529034c0702" class="animate-link">(Coming soon)Buy Now</a>・・・¥&thinsp;10,000</a><br class="sp"><br class="pc">
+                &ensp;<a href="/order3En" class="animate-link">Buy Now</a>・・・¥&thinsp;10,000</a><br class="sp"><br class="pc">
                 <br>
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>
-                &ensp;<a href="/" class="animate-link" >(Coming soon)If you're interested in a custom order, please click here.</a> 
+                &ensp;<a href="/semi-order3En" class="animate-link" >If you're interested in a custom order, please click here.</a> 
            
-             
+              
                 </p>
 
 
