--- a/src/components/Pa2orderEn.astro
+++ b/src/components/Pa2orderEn.astro
@@ -284,6 +284,14 @@
                     <option value="No.8ターコイズ">No.8&thinsp; Turquoise</option>
                 </select>
 
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*Hardware（&thinsp;hook&thinsp;）</label>
+                <select name="hook" class="form-control" required="required">
+                    <option value="" disabled selected>Please select</option>
+                    <option value="ゴールド">Gold</option>
+                    <option value="シルバー">Silver</option>
+                    <option value="アンティーク">Antique</option>
+                </select>
+
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">Engraving Pattern(&thinsp;For those who prefer, the placement is on the first card slot.&thinsp;)</label>
                 <select name="kokuin" class="form-control" >
