--- a/src/components/Pa4En.astro
+++ b/src/components/Pa4En.astro
@@ -96,7 +96,7 @@
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*Hardware（&thinsp;Grommet&thinsp;）</label>
-                <select name="ring" class="form-control" required="required">
+                <select name="grommet" class="form-control" required="required">
                     <option value="" disabled selected>Please select</option>
                     <option value="ゴールド">Gold</option>
                     <option value="シルバー">Silver</option>
