--- a/src/components/Footeren.astro
+++ b/src/components/Footeren.astro
@@ -2,7 +2,7 @@
     <ul class="menu">
       <li><a href="/homeEn">Home</a></li>
       <li><a href="/aboutEn">Quality</a></li>
-      <li><a href="/teams-of-setvice">Terms Of Service</a></li>
+      <li><a href="/teams-of-setvice">Terms of Service</a></li>
       <li><a href="/contact">Contact Us</a></li>
     </ul>
     <p class="copyright">
